add auth and ukr paleosoil point, swagger
