# src/routes/api/auth.js
@@ -1,35 +1,34 @@
-const express = require('express');
-const bcrypt = require('bcryptjs');
-const jwt = require('jsonwebtoken');
-const { BadRequest, Conflict, Unauthorized } = require('http-errors');
+const express = require("express");
+const bcrypt = require("bcryptjs");
+const jwt = require("jsonwebtoken");
+const { BadRequest, Conflict, Unauthorized } = require("http-errors");
 
-const { User } = require('../../models');
-const { joiSignupSchema, joiLoginSchema } = require('../../models/user');
-const { authenticate } = require('../../middlewares');
+const { User } = require("../../models");
+const { joiSignupSchema, joiLoginSchema } = require("../../models/user");
+const { authenticate } = require("../../middlewares");
 
 const { SECRET_KEY } = process.env;
 
 const router = express.Router();
 
 // регистрация пользователя с хешированием пароля
-router.post('/register', async (req, res, next) => {
+router.post("/register", async (req, res, next) => {
   try {
     const { error } = joiSignupSchema.validate(req.body);
     if (error) {
-      throw new BadRequest('Ошибка от Joi или другой библиотеки  валидации');
+      throw new BadRequest("Ошибка от Joi или другой библиотеки  валидации");
     }
-    console.log(req.body);
-    const { email, password, name } = req.body;
+    const { email, password } = req.body;
     const user = await User.findOne({ email });
     if (user) {
-      throw new Conflict('Email in use');
+      throw new Conflict("Email in use");
     }
+
     const salt = await bcrypt.genSalt(10);
-    const hashPass = await bcrypt.hash(password, salt);
+    const hashPassword = await bcrypt.hash(password, salt);
     const newUser = await User.create({
       email,
-      password: hashPass,
-      name,
+      password: hashPassword,
     });
 
     const { _id } = newUser;
@@ -40,12 +39,11 @@ router.post('/register', async (req, res, next) => {
     const token = jwt.sign(payload, SECRET_KEY);
     await User.findByIdAndUpdate(_id, { token });
     res.status(201).json({
-      message: 'User registered',
+      message: "User registered",
       data: {
         token,
         user: {
           email,
-          name,
         },
       },
     });
@@ -55,7 +53,7 @@ router.post('/register', async (req, res, next) => {
 });
 
 // логирование пользователя на сайте
-router.post('/login', async (req, res, next) => {
+router.post("/login", async (req, res, next) => {
   try {
     const { error } = joiLoginSchema.validate(req.body);
     if (error) {
@@ -65,25 +63,24 @@ router.post('/login', async (req, res, next) => {
     console.log(req.body);
     const user = await User.findOne({ email });
     if (!user) {
-      throw Unauthorized('Email or password is wrong');
+      throw Unauthorized("Email or password is wrong");
     }
     const passwordUser = await bcrypt.compare(password, user.password);
     if (!passwordUser) {
-      throw Unauthorized('Email or password is wrong');
+      throw Unauthorized("Email or password is wrong");
     }
 
-    const { _id, subscription } = user;
+    const { _id } = user;
     const payload = {
       id: _id,
     };
 
-    const token = jwt.sign(payload, SECRET_KEY, { expiresIn: '1h' });
+    const token = jwt.sign(payload, SECRET_KEY);
     await User.findByIdAndUpdate(_id, { token });
     res.json({
       token,
       user: {
         email,
-        subscription,
       },
     });
   } catch (error) {
@@ -91,9 +88,19 @@ router.post('/login', async (req, res, next) => {
   }
 });
 
+// текущий пользователь
+router.get("/current", authenticate, async (req, res, next) => {
+  const { email, token } = req.user;
+  res.json({
+    token,
+    user: {
+      email,
+    },
+  });
+});
+
 // разлогинивание пользователя
-router.get('/logout', authenticate, async (req, res) => {
-  console.log(req.user);
+router.get("/logout", authenticate, async (req, res) => {
   const { _id } = req.user;
   await User.findByIdAndUpdate(_id, { token: null });
   res.status(204).send();
